Fix description text to better fit portfolio content

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,7 +10,7 @@
     "home": {
       "name": "Rodrigo Cardoso",
       "subtitle": "Full-stack Developer",
-      "description": "Hello, I'm Rodrigo Cardoso, a passionate and experienced full-stack developer with a focus on Java and Angular. I have a strong background in building web applications using Spring Boot. With a keen eye for detail and a love for problem-solving, I strive to create intuitive, efficient, and user-friendly web experiences. My expertise lies in developing robust and scalable solutions, leveraging my extensive knowledge of front-end technologies and back-end frameworks. I am dedicated to continuous learning and staying up-to-date with the latest industry trends, ensuring that I always deliver cutting-edge solutions. If you're looking for a skilled developer who can bring your web application ideas to life, feel free to explore my portfolio and get in touch!"
+      "description": "Hello, I'm Rodrigo Cardoso, a passionate and experienced full-stack developer with a focus on Java and Angular. I have a strong background in building web applications using Spring Boot. With a keen eye for detail and a love for problem-solving, I strive to create intuitive, efficient, and user-friendly web experiences. My expertise lies in developing robust and scalable solutions, leveraging my extensive knowledge of front-end technologies and back-end frameworks. I am dedicated to continuous learning and staying up-to-date with the latest industry trends, ensuring that I always deliver cutting-edge solutions. If you're looking for a skilled developer who can bring your web application ideas to life, feel free to get in touch!"
     },
     "skills": {
       "level1": "Learner",
